<resources>
    <string name="app_name">Albedo</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_profile">Profile</string>

    // Home
    <string name="title_airings">Top Airings</string>
    <string name="title_upcomings">Top Upcomings</string>
    <string name="title_movies">Top Movies</string>
    <string name="title_top_manga">Top Manga</string>
    <string name="title_novels">Top Novels</string>

    // Tabs
    <string name="title_menu_anime">Anime</string>
    <string name="title_menu_manga">Manga</string>

    // Search
    <string name="search_bar_search">Search …</string>
    <string name="search_bar_search_long">Search anime, manga, person, character</string>
    <string name="most_popular_animes">Most Popular Anime</string>
    <string name="score">Score: 0.00</string>
    <string name="search_people_alias">Alias: </string>
    <string name="search_character_other_anime">Anime: </string>

    // Schedule
    <string name="title_schedule_anime">Anime Schedule</string>

    // Detail Fragment
    <string name="detail_watched">Watched</string>
    <string name="title">Title</string>
    <string name="detail_airing_start">Airing</string>
    <string name="detail_episodes">Episodes</string>
    <string name="detail_members">Members</string>
    <string name="detail_score">Score</string>
    <string name="detail_synopsis">Synopsis</string>
    <string name="detail_genres">Genres</string>
    <string name="detail_producers">Producers</string>
    <string name="detail_opening_themes">Opening Themes</string>
    <string name="detail_ending_themes">Ending Themes</string>
    <string name="detail_trailer">Trailer</string>

    <string name="detail_published">Published</string>
    <string name="detail_volumes">Volume</string>
    <string name="detail_authors">Authors</string>
    <string name="detail_read">Read</string>

    // Dialog Add
    <string name="dialog_add_title">Save to …</string>
    <string name="dialog_add_new_list">Create New List</string>
    <string name="dialog_add_new_item">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    // Profile
    <string name="profile_watched_anime">Watched Anime</string>
    <string name="profile_read_manga">Read Manga</string>
    <string name="profile_watched_episodes">Watched Episodes</string>
    <string name="profile_favourite_anime">Favourite Anime</string>
    <string name="profile_favourite_manga">Favourite Manga</string>
    <string name="profile_favourite_quotes">Favourite Quotes</string>
    <string name="profile_my_list">Saved Lists</string>

    // Favourite Quote
    <string name="favourite_quote_character">Character: </string>
    <string name="favourite_quote_anime">Anime: </string>

    // Argument Keys
    <string name="key_anime_id">animeId</string>
    <string name="key_manga_id">mangaId</string>
    <string name="key_genre_id">genreId</string>
    <string name="key_genre_type">genreType</string>

</resources>